--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,4 @@
 [develop]
-script-dir=$base/lib/<name>
+script-dir=$base/lib/detr_det
 [install]
-install-scripts=$base/lib/<name>
+install-scripts=$base/lib/detr_det
